#210666 - Update JSF component libraries welcome pages templates according to their owners - RichFaces

--- a/web.jsf.richfaces/src/org/netbeans/modules/web/jsf/richfaces/resources/welcomeRichfaces.template
+++ b/web.jsf.richfaces/src/org/netbeans/modules/web/jsf/richfaces/resources/welcomeRichfaces.template
@@ -13,7 +13,7 @@
                 <li><h:outputLink value="http://richfaces.org" >Richfaces Project Home Page</h:outputLink></li>
                 <li><h:outputLink value="http://showcase.richfaces.org" >Richfaces Showcase</h:outputLink></li>
                 <li><h:outputLink value="https://community.jboss.org/en/richfaces?view=discussions" >User Forum</h:outputLink></li>
-                <li><h:outputLink value="http://www.jboss.org/richfaces/docs" >Richfaces documentation</h:outputLink>
+                <li><h:outputLink value="http://www.jboss.org/richfaces/docs" >Richfaces documentation...</h:outputLink>
                     <ul>
                         <li><h:outputLink value="http://docs.jboss.org/richfaces/latest_4_X/Developer_Guide/en-US/html_single/" >Development Guide</h:outputLink></li>
                         <li><h:outputLink value="http://docs.jboss.org/richfaces/latest_4_X/Component_Reference/en-US/html/" >Component Reference</h:outputLink></li>
