#206323 - Typo error in JSF project wizard tooltip

--- a/web.jsf/src/org/netbeans/modules/web/jsf/wizards/Bundle.properties
+++ b/web.jsf/src/org/netbeans/modules/web/jsf/wizards/Bundle.properties
@@ -173,7 +173,7 @@ MSG_VersionAlreadyExist=A JavaServer Faces Library with this name is already def
 LBL_REGISTERED_LIBRARIES=Registered Libraries\:
 LBL_CREATE_NEW_LIBRARY=Create New Library
 LBL_VERSION=Library Name\:
-MSG_CreatingLibraries=When you finish this wizard, JSF Library will be added to the IDE's Library Manager. \n\\nThis library will contain the appropriate JARs from the JSF folder.
+MSG_CreatingLibraries=<html>When you finish this wizard, JSF Library will be added to the IDE's Library Manager. <br>This library will contain the appropriate JARs from the JSF folder.</html>
 HINT_Version=Write the JSF version (e.g. "1.1")
 LBL_INSTALL_DIR=JSF Folder\:
 LBL_Any_Library=Server Library:
