#211131 - Go To &Line or Bookmark - fixed dialog title.

--- a/editor.bookmarks/src/org/netbeans/modules/editor/bookmarks/ui/Bundle.properties
+++ b/editor.bookmarks/src/org/netbeans/modules/editor/bookmarks/ui/Bundle.properties
@@ -58,7 +58,7 @@ LBL_BookmarkLocationDescription=Bookmark Location in a File
 goto=Goto Line or Bookmark ...
 bookmark-history-popup-next=Bookmark History Popup Next
 bookmark-history-popup-previous=Bookmark History Popup Previous
-CTL_gotoDialogTitle=Go To &Line or Bookmark
+CTL_gotoDialogTitle=Go To Line or Bookmark
 CTL_gotoDialogGotoLabel=Go To &Line or Bookmark
 CTL_gotoDialogBookmarkKeyChooserLabel={0} for bookmark key chooser...
 CTL_gotoDialogGotoButton=Go To
