--- a/php.project/src/org/netbeans/modules/php/project/ui/actions/Bundle.properties
+++ b/php.project/src/org/netbeans/modules/php/project/ui/actions/Bundle.properties
@@ -45,8 +45,8 @@ LBL_RunProject=Run
 LBL_DebugProject=Debug
 LBL_TestProject=Test
 LBL_TestFile=Test
-LBL_UploadCommand=Upload
-LBL_DownloadCommand=Download
+LBL_UploadCommand=Upload...
+LBL_DownloadCommand=Download...
 LBL_RemoteLog=Remote Log: {0}
 LBL_RemoteSummary=Summary
 LBL_RemoteSucceeded=Succeeded:
