Actions in search results window

--- a/api.search/src/org/netbeans/modules/search/Bundle.properties
+++ b/api.search/src/org/netbeans/modules/search/Bundle.properties
@@ -168,6 +168,7 @@ TEXT_BUTTON_PRECEDING=null
 TEXT_LABEL_BEGIN_DATE=null
 TEXT_LABEL_PATH=P&ath:
 HINT_SHOW_EXPLORER=Show node in Explorer
+LBL_EditAction=Edit
 LBL_GotoDetailAction=Go to Detail
 LBL_CopyFilePathAction=Copy File Path
 
