Surround with /* ... */ implemented.

--- a/java.editor/src/org/netbeans/modules/java/editor/resources/Bundle.properties
+++ b/java.editor/src/org/netbeans/modules/java/editor/resources/Bundle.properties
@@ -106,6 +106,7 @@ CT_form=for(Map.Entry<KeyType, ValueType> <b>entry</b> : <b>map</b>.entrySet()) 
     ValueType <b>value</b> = entry.getValue();\
     ,..|\
 }
+CT_bcom=/* ... */
 
 # Options
 Actions/Source=Source
