--- a/php.project/src/org/netbeans/modules/php/project/connections/sync/Bundle.properties
+++ b/php.project/src/org/netbeans/modules/php/project/connections/sync/Bundle.properties
@@ -41,9 +41,12 @@
 # sync
 SyncPanel.diffButton.text=&Diff...
 SyncPanel.warningLabel.text=<html><b>This feature is experimental! Review carefully all suggested operations before running.</b></html>
-SyncPanel.viewLabel.text=View:
 SyncPanel.operationLabel.text=Operation:
 SyncPanel.showSummaryCheckBox.text=&Show Summary
+SyncPanel.operationsPanel.title=Show Planned Operations
+SyncPanel.problemsPanel.title=Show Problems
+SyncPanel.checkAllButton.text=&Check All
+SyncPanel.uncheckAllButton.text=U&ncheck All
 
 # summary
 SummaryPanel.uploadLabel.text=Files to be uploaded:
