#207819 - IllegalStateException: getOutputStream invoked in AWT

--- a/j2ee.samples/src/org/netbeans/modules/j2ee/samples/Bundle.properties
+++ b/j2ee.samples/src/org/netbeans/modules/j2ee/samples/Bundle.properties
@@ -110,3 +110,6 @@ LBL_Browse_A11YDesc=Browse...
 LBL_DBName_A11YDesc=Database Name\:
 LBL_DBLocation_A11YDesc=Database Location\:
 LBL_ProjectLocation_A11YDesc=Project Location\:
+
+LBL_NewSampleProjectWizardIterator_WizardProgress_CreatingProject=<html>Creating new project</html>
+LBL_NewSampleProjectWizardIterator_WizardProgress_PreparingToOpen=<html>Prepare new project to be open</html>
