--- a/php.project/src/org/netbeans/modules/php/project/connections/sync/Bundle.properties
+++ b/php.project/src/org/netbeans/modules/php/project/connections/sync/Bundle.properties
@@ -42,7 +42,7 @@
 SyncPanel.diffButton.text=&Diff...
 SyncPanel.warningLabel.text=<html><b>This feature is experimental! Review carefully all suggested operations before running.</b></html>
 SyncPanel.operationLabel.text=Operation:
-SyncPanel.showSummaryCheckBox.text=&Show Summary
+SyncPanel.showSummaryCheckBox.text=&Show Summary Before Start
 SyncPanel.operationsPanel.title=Show Planned Operations
 SyncPanel.problemsPanel.title=Show Problems
 SyncPanel.checkAllButton.text=&Check All
