#183428 - AWT thread blocked for 23453 ms.

--- a/groovy.support/src/org/netbeans/modules/groovy/support/wizard/Bundle.properties
+++ b/groovy.support/src/org/netbeans/modules/groovy/support/wizard/Bundle.properties
@@ -41,3 +41,4 @@
 # made subject to such option by the copyright holder.
 
 ERR_GroovyNotEnabled=Groovy will be enabled for this project
+LBL_NewGroovyFileWizardIterator_WizardProgress_CreatingFile=<html>Creating new groovy file</html>
