Recreate SwingInterop using new FX-in-Swing support

--- a/javafx2.samples/SwingInterop/nbproject/project.properties
+++ b/javafx2.samples/SwingInterop/nbproject/project.properties
@@ -35,6 +35,8 @@ endorsed.classpath=\
     ${javafx.runtime}/lib/plugin.jar
 excludes=
 includes=**
+# Non-JavaFX 2.0 jar file creation is deactivated in JavaFX 2.0 projects
+jar.archive.disabled=true
 jar.compress=false
 javac.classpath=
 # Space-separated list of extra javac options
@@ -62,25 +64,36 @@ javadoc.version=false
 javadoc.windowtitle=
 javafx.binarycss=false
 javafx.deploy.allowoffline=true
-# If true, application update mode is set to 'background', if false, update mode is set to 'eager'
-javafx.deploy.backgroundupdate=true
+# If true, application update mode is set to 'background', if false, update mode is set to 'always'
+javafx.deploy.backgroundupdate=false
 javafx.deploy.embedJNLP=true
 javafx.deploy.includeDT=true
+javafx.deploy.permissionselevated=true
 # This is a JavaFX project
 javafx.enabled=true
 javafx.fallback.class=com.javafx.main.NoJavaFXFallback
-# This project is a Preloader
-javafx.preloader=true
-# Preloader can not use a preloader
+# Main class for JavaFX
+javafx.main.class=swinginterop.SwingInterop
+javafx.preloader.class=
+# This project does not use Preloader
 javafx.preloader.enabled=false
+javafx.preloader.jar.filename=
+javafx.preloader.jar.path=
+javafx.preloader.project.path=
+javafx.preloader.type=none
 # Set true for GlassFish only. Rebases manifest classpaths of JARs in lib dir. Not usable with signed JARs.
 javafx.rebase.libs=false
 javafx.run.height=600
 javafx.run.width=800
 javafx.runtime=${platforms.Default_JavaFX_Platform.javafx.runtime.home}
 javafx.sdk=${platforms.Default_JavaFX_Platform.javafx.sdk.home}
+javafx.signing.enabled=true
+javafx.signing.type=self
+# This project embeds JavaFX components in Swing container
+javafx.swing=true
 # Pre-JavaFX 2.0 WebStart is deactivated in JavaFX 2.0 projects
 jnlp.enabled=false
+# Main class for Java launcher
 main.class=swinginterop.SwingInterop
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
