Issue #211326 - Delete a query

--- a/jira/src/org/netbeans/modules/jira/query/Bundle.properties
+++ b/jira/src/org/netbeans/modules/jira/query/Bundle.properties
@@ -151,3 +151,4 @@ QueryPanel.jLabel22.text=
 QueryPanel.findIssuesButton.text=&Find Issues
 
 LBL_Loading=Loading...
+MSG_CANNOT_REMOVE_SERVER_FILTER=Cannot remove a JIRA server filter.
