--- a/jira/src/org/netbeans/modules/jira/util/Bundle.properties
+++ b/jira/src/org/netbeans/modules/jira/util/Bundle.properties
@@ -54,3 +54,4 @@ WorkLog.codePattern={0,choice,0#|0<{0,number,integer}w }\
 WorkLog.emptyWorkLog1=0 minutes
 WorkLog.emptyWorkLog2=Not Specified
 
+LBLError=Error
