dialog action should probably have ...

--- a/form/src/org/netbeans/modules/form/actions/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/actions/Bundle.properties
@@ -116,7 +116,7 @@ FMT_CTL_HandlerFromMultiple={0}
 # Formatting of test form window title
 FMT_TestingForm=Design Preview [{0}]
 
-ACT_CustomCode=Customize Code
+ACT_CustomCode=Customize Code...
 
 # Duplicate action
 ACT_Duplicate=Duplicate
