#207541 should help, jars was renamed to names used by pom, also update all references I found to actual names

--- a/j2ee.eclipselinkmodelgen/nbproject/project.properties
+++ b/j2ee.eclipselinkmodelgen/nbproject/project.properties
@@ -41,6 +41,6 @@
 # made subject to such option by the copyright holder.
 
 jnlp.indirect.jars=\
-    modules/ext/eclipselink/eclipselink-jpa-modelgen-2.3.2.jar
+    modules/ext/eclipselink/org.eclipse.persistence.jpa.modelgen.processor-2.3.2.jar
 
-release.external/eclipselink-jpa-modelgen-2.3.2.jar=modules/ext/eclipselink/eclipselink-jpa-modelgen-2.3.2.jar
+release.external/org.eclipse.persistence.jpa.modelgen.processor-2.3.2.jar=modules/ext/eclipselink/org.eclipse.persistence.jpa.modelgen.processor-2.3.2.jar
