#211183 - Deploy on Save Grayed Out

--- a/maven.j2ee/src/org/netbeans/modules/maven/j2ee/customizer/Bundle.properties
+++ b/maven.j2ee/src/org/netbeans/modules/maven/j2ee/customizer/Bundle.properties
@@ -52,3 +52,4 @@ ACSD_AddFramework=Adding a Framework to the web project.
 CustomizerRunWeb.lblProfile.text=&Profile:
 CustomizerRunWeb.jCheckBoxDeployOnSave.text=D&eploy on Save
 CustomizerRunWeb.dosDescription.text=<html>If selected, files are compiled and deployed when you save them.<br>This option saves you time when you run or debug your application in the IDE.</html>
+CustomizerRunWeb.dosDescriptionIfDisabled.text=<html>If selected, files are compiled and deployed when you save them.<br>This option saves you time when you run or debug your application in the IDE.<br>NOTE: If you want to enable Deploy on Save feature you will need to change Compile on Save first (you can do that in Build/Compile project properties)</html>
