Reading the list of selectors from jQuery documentation file.

--- a/javascript2.editor/nbproject/project.properties
+++ b/javascript2.editor/nbproject/project.properties
@@ -4,4 +4,6 @@ build.compiler=extJavac
 javac.compilerargs=-J-Xmx512m
 nbm.needs.restart=true
 
+release.external/jquery-api.xml=docs/jquery-api.xml
+
 
