#211259 - missing accelerator key

--- a/core.windows/src/org/netbeans/core/windows/actions/Bundle.properties
+++ b/core.windows/src/org/netbeans/core/windows/actions/Bundle.properties
@@ -75,7 +75,7 @@ LBL_SaveDocumentAction=&Save
 LBL_CloneDocumentAction=C&lone
 # CloseAllButThisAction
 CTL_CloseAllButThisAction=Close &Other
-CTL_CloseAllButThisAction_MainMenu=Close Other Documents
+CTL_CloseAllButThisAction_MainMenu=Close Other Docu&ments
 
 # MaximizeWindowAction
 CTL_MaximizeWindowAction=Maximi&ze
