--- a/web.common/src/org/netbeans/modules/web/common/refactoring/Bundle.properties
+++ b/web.common/src/org/netbeans/modules/web/common/refactoring/Bundle.properties
@@ -44,6 +44,6 @@ LBL_Rename=Rename
 LBL_FolderRefactoring=Rename refactoring
 DSC_Rename=Rename <b>{0}</b> to <b>{1}</b>
 LBL_NewName=&New Name:
-LBL_RenameWithoutRefactoring=&Rename Without Refactoring
+LBL_RenameWithoutRefactoring=Rename &Without Refactoring
 
 ACSD_nameField=Type new name
