fixed Bug #211288 ShowIncludeHierarchyAction.enable [LowPerformance took 136109 ms.]

--- a/cnd.navigation/src/org/netbeans/modules/cnd/navigation/hierarchy/Bundle.properties
+++ b/cnd.navigation/src/org/netbeans/modules/cnd/navigation/hierarchy/Bundle.properties
@@ -62,3 +62,5 @@ CTL_ClassHierarchyDialogTitle=Type Hierarchy
 MESSAGE_NoContextClass=You should point a type to view its hierarchy.
 
 CTL_OK=OK
+
+Loading=Loading...
