Issue #211356 - java.util.NoSuchElementException at java.util.LinkedList.getLast

--- a/refactoring.java/src/org/netbeans/modules/refactoring/java/plugins/Bundle.properties
+++ b/refactoring.java/src/org/netbeans/modules/refactoring/java/plugins/Bundle.properties
@@ -285,6 +285,7 @@ ERR_InlineMethodNoLastReturn=Cannot inline this method, the last statement must 
 ERR_InlineMethodLocalAccessors=Cannot inline public method which uses local accessors.
 ERR_InlineMethodNoAccessors=Cannot inline public method which uses non-public accessors.
 WRN_InlineNotAccessible={0} is not accessible from {1}.
+WRN_InlineMethodMultipleLines=The method body has multiple statements, will not update reference at {0}. The sources will not compile after refactoring!
 ERR_InlineMethodNameClash=Cannot inline this method, {0}
 ERR_InlineMethodNoReturnAssert=The method is used in an assert statement, but has void return type. The sources will not compile after refactoring!
 ERR_DollarWarning=The $ character should be used only in mechanically generated code.
