Making groovy.editor tests running on Mac.

--- a/groovy.editor/nbproject/project.properties
+++ b/groovy.editor/nbproject/project.properties
@@ -21,3 +21,5 @@ test.config.stableBTD.excludes=\
     **/api/completion/*,\
     **/api/lexer/CallTest.class,\
     **/api/parser/*requires.nb.javac=true
+
+requires.nb.javac=true
