#206289: renaming javac-api-nb-7.0-b07.jar and javac-impl-nb-7.0-b07.jar to nb-javac-api.jar and nb-javac-impl.jar

--- a/j2ee.sun.appsrv81/appsrvbridge/nbproject/project.properties
+++ b/j2ee.sun.appsrv81/appsrvbridge/nbproject/project.properties
@@ -3,7 +3,7 @@ build.generated.dir=${build.dir}/generated
 build.generated.sources.dir=${build.dir}/generated-sources
 excludes=
 file.reference.appservapis.jar=../external/appservapis-2.0.58.3.jar
-file.reference.javac-api.jar=../../nbbuild/netbeans/java/modules/ext/javac-api-nb-7.0-b07.jar
+file.reference.javac-api.jar=../../nbbuild/netbeans/java/modules/ext/nb-javac-api.jar
 file.reference.jh-2.0_05.jar=../../nbbuild/netbeans/platform/modules/ext/jh-2.0_05.jar
 file.reference.jsr88javax.jar=../../nbbuild/netbeans/enterprise/modules/ext/jsr88javax.jar
 file.reference.openide-loaders.jar=../../nbbuild/netbeans/platform/modules/org-openide-loaders.jar
