--- a/java.source/build.xml
+++ b/java.source/build.xml
@@ -56,7 +56,7 @@ made subject to such option by the copyright holder.
         </depend>
         <property name="processor.path.for.tests" value=""/>
         <nb-javac srcdir="${src.dir}" destdir="${build.classes.dir}" debug="${build.compiler.debug}" debuglevel="${build.compiler.debuglevel}" encoding="UTF-8"
-                deprecation="${build.compiler.deprecation}" optimize="${build.compiler.optimize}" source="${javac.source}" target="${javac.target}" includeantruntime="false" includejavaruntime="true" bootclasspath="../libs.javacapi/external/javac-api-nb-7.0-b07.jar:../libs.javacimpl/external/javac-impl-nb-7.0-b07.jar">
+                deprecation="${build.compiler.deprecation}" optimize="${build.compiler.optimize}" source="${javac.source}" target="${javac.target}" includeantruntime="false" includejavaruntime="true" bootclasspath="../libs.javacapi/external/nb-javac-api.jar:../libs.javacimpl/external/nb-javac-impl.jar">
             <classpath refid="cp"/>
             <compilerarg line="${javac.compilerargs}"/>
             <processorpath refid="processor.cp"/>
@@ -103,7 +103,7 @@ made subject to such option by the copyright holder.
             <classpath refid="cp"/>
         </depend>
         <property name="processor.path.for.tests" value=""/>
-        <nb-javac srcdir="${src.dir}" destdir="${build.classes.dir}" debug="${build.compiler.debug}" debuglevel="${build.compiler.debuglevel}" encoding="UTF-8" deprecation="${build.compiler.deprecation}" optimize="${build.compiler.optimize}" source="${javac.source}" target="${javac.target}" includeantruntime="false" bootclasspath="../libs.javacapi/external/javac-api-nb-7.0-b07.jar:../libs.javacimpl/external/javac-impl-nb-7.0-b07.jar:${nbjdk.bootclasspath}">
+        <nb-javac srcdir="${src.dir}" destdir="${build.classes.dir}" debug="${build.compiler.debug}" debuglevel="${build.compiler.debuglevel}" encoding="UTF-8" deprecation="${build.compiler.deprecation}" optimize="${build.compiler.optimize}" source="${javac.source}" target="${javac.target}" includeantruntime="false" bootclasspath="../libs.javacapi/external/nb-javac-api.jar:../libs.javacimpl/external/nb-javac-impl.jar:${nbjdk.bootclasspath}">
             <classpath refid="cp"/>
             <compilerarg line="${javac.compilerargs}"/>
             <processorpath refid="processor.cp"/>
