--- a/mobility.jsr172/nbproject/project.properties
+++ b/mobility.jsr172/nbproject/project.properties
@@ -45,8 +45,8 @@ is.eager=true
 test.unit.lib.cp=\
 ${netbeans.dest.dir}/platform/lib/boot.jar:\
 ${netbeans.dest.dir}/platform/core/core.jar:\
-${netbeans.dest.dir}/java/modules/ext/javac-api-nb-7.0-b07.jar:\
-${netbeans.dest.dir}/java/modules/ext/javac-impl-nb-7.0-b07.jar:\
+${netbeans.dest.dir}/java/modules/ext/nb-javac-api.jar:\
+${netbeans.dest.dir}/java/modules/ext/nb-javac-impl.jar:\
 ${netbeans.dest.dir}/java/modules/org-netbeans-api-java.jar:\
 ${netbeans.dest.dir}/platform/modules/org-netbeans-api-progress.jar:\
 ${netbeans.dest.dir}/java/modules/org-netbeans-libs-javacapi.jar:\
