--- a/java.hints/nbproject/project.properties
+++ b/java.hints/nbproject/project.properties
@@ -83,7 +83,7 @@ test.unit.run.cp.extra=\
 # requires nb.javac for compiling of tests on Mac
 requires.nb.javac=true
 #183728: hack to make java.hints compilable even though javac impl is on the bootclasspath:
-bootclasspath.prepend=${nb_all}/libs.javacapi/external/javac-api-nb-7.0-b07.jar${path.separator}${nb_all}/libs.javacimpl/external/javac-impl-nb-7.0-b07.jar
+bootclasspath.prepend=${nb_all}/libs.javacapi/external/nb-javac-api.jar${path.separator}${nb_all}/libs.javacimpl/external/nb-javac-impl.jar
 
 test.config.jet-main.excludes=**/jackpot/*Test.class
 test.config.stableBTD.includes=\
