--- a/java.source/nbproject/project.properties
+++ b/java.source/nbproject/project.properties
@@ -47,7 +47,7 @@ javadoc.title=Java Source
 javadoc.arch=${basedir}/arch.xml
 javadoc.apichanges=${basedir}/apichanges.xml
 spec.version.base=0.103.0
-test.qa-functional.cp.extra=${refactoring.java.dir}/modules/ext/javac-api-nb-7.0-b07.jar
+test.qa-functional.cp.extra=${refactoring.java.dir}/modules/ext/nb-javac-api.jar
 test.unit.run.cp.extra=${o.n.core.dir}/core/core.jar:\
     ${o.n.core.dir}/lib/boot.jar:\
     ${editor.mimelookup.impl.dir}/modules/org-netbeans-modules-editor-mimelookup-impl.jar
