--- a/libs.javacapi/nbproject/project.properties
+++ b/libs.javacapi/nbproject/project.properties
@@ -47,6 +47,6 @@ javadoc.title=Javac API
 nbm.homepage=http://jackpot.netbeans.org/
 nbm.module.author=Petr Hrebejk, Sun Microsystems, Inc.
 spec.version.base=7.9.0
-release.external/javac-api-nb-7.0-b07.jar=modules/ext/javac-api-nb-7.0-b07.jar
+release.external/nb-javac-api.jar=modules/ext/nb-javac-api.jar
 javadoc.arch=${basedir}/arch.xml
 module.javadoc.packages=com.sun.source.tree,com.sun.source.util
