--- a/libs.javacimpl/nbproject/project.properties
+++ b/libs.javacimpl/nbproject/project.properties
@@ -44,7 +44,7 @@ javac.source=1.6
 nbm.homepage=http://jackpot.netbeans.org/
 nbm.module.author=Petr Hrebejk, Sun Microsystems, Inc.
 spec.version.base=0.26.0
-release.external/javac-impl-nb-7.0-b07.jar=modules/ext/javac-impl-nb-7.0-b07.jar
+release.external/nb-javac-impl.jar=modules/ext/nb-javac-impl.jar
 javadoc.arch=${basedir}/arch.xml
 
 
