--- a/java.hints.declarative/src/org/netbeans/modules/java/hints/declarative/idebinding/Bundle.properties
+++ b/java.hints.declarative/src/org/netbeans/modules/java/hints/declarative/idebinding/Bundle.properties
@@ -39,4 +39,4 @@
 # Portions Copyrighted 2012 Sun Microsystems, Inc.
 
 ERR_RemoveExpression=Remove from parent requested for non-void expression, can lead \
-to results that are not intuitive are hard to predictable. Missing ';' at the end of the expression?
+to results that are not intuitive and are hard to predict. Missing ';' at the end of the expression?
