#162115 remove toplink usage and from build in some places, should be no bundled now

--- a/websvc.rest.samples/CustomerDBSpring/nbproject/project.properties
+++ b/websvc.rest.samples/CustomerDBSpring/nbproject/project.properties
@@ -74,7 +74,7 @@ javac.classpath=\
     ${libs.jstl11.classpath}:\
     ${libs.restapi.classpath}:\
     ${libs.restlib.classpath}:\
-    ${libs.toplink.classpath}
+    ${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
