--- a/apisupport.crudsample/crud-sample-application/CustomerDBAccess/nbproject/project.properties
+++ b/apisupport.crudsample/crud-sample-application/CustomerDBAccess/nbproject/project.properties
@@ -27,9 +27,7 @@ endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${libs.toplink.classpath}:\
-    ${libs.eclipselink.classpath}
+javac.classpath=${libs.eclipselink.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
