--- a/j2ee.metadata.model.support/nbproject/project.properties
+++ b/j2ee.metadata.model.support/nbproject/project.properties
@@ -45,9 +45,7 @@ javac.source=1.6
 requires.nb.javac=true
 
 # javac-api.jar has javax.annotation.Resource
-test.unit.cp.extra=\
-    ${j2ee.toplinklib.dir}/modules/ext/toplink/toplink-essentials.jar:\
-    ${nb_all}/libs.javacapi/external/javac-api-nb-7.0-b07.jar
+test.unit.cp.extra=${nb_all}/libs.javacapi/external/javac-api-nb-7.0-b07.jar
 
 test.config.stableBTD.includes=**/*Test.class
 test.config.stableBTD.excludes=\
