Fixed #210239 - Source dirs field does not have file picker

--- a/cnd.debugger.common2/src/org/netbeans/modules/cnd/debugger/common2/utils/options/Bundle.properties
+++ b/cnd.debugger.common2/src/org/netbeans/modules/cnd/debugger/common2/utils/options/Bundle.properties
@@ -46,3 +46,19 @@ VALUE_off=No
 
 # for Validity
 AnyValueisValid=Any value is valid
+
+#DirectoryChooserPanel
+ADD_DIRECTORY_DIALOG_TITLE=Select Directory
+ADD_DIRECTORY_BUTTON_TXT=Select
+ADD_BUTTON_TXT=Add
+ADD_BUTTON_MN=A
+DOWN_BUTTON_TXT=Down
+DOWN_BUTTON_MN=w
+EDIT_BUTTON_TXT=Edit
+EDIT_BUTTON_MN=E
+EDIT_DIALOG_TITLE_TXT=Edit
+EDIT_DIALOG_LABEL_TXT=New Name:
+DIRECTORIES_LABEL_TXT=Directories:
+DIRECTORIES_LABEL_MN=i
+UP_BUTTON_TXT=Up
+UP_BUTTON_MN=U
