#211453 - Cannot run JDK7+NetBeans Dev bundle installer let's keep the old label for JDK's that are yet to be installed

--- a/nbi/engine/src/org/netbeans/installer/wizard/components/actions/Bundle.properties
+++ b/nbi/engine/src/org/netbeans/installer/wizard/components/actions/Bundle.properties
@@ -114,6 +114,7 @@ SFJA.prepare.list=Preparing locations list...
 SFJA.checking=Checking {0}
 SFJA.search.java=Searching for installed Java environments...
 SFJA.entry.label={0} (v. {1} [{2}] by {3})
+SFJA.entry.label.noarch={0} (v. {1} by {2})
 SFJA.entry.label.non.final=<html><span>{0} (v. {1} [{2}] <span color="red">(non-final)</span> by {3})</span></html>
 
 ################################################################################
