#211496: Including name of the file in the error message

--- a/openide.loaders/src/org/openide/loaders/Bundle.properties
+++ b/openide.loaders/src/org/openide/loaders/Bundle.properties
@@ -334,6 +334,6 @@ MSG_SaveAs_SameFileSelected_Title=Save As
 MSG_SaveAs_OverwriteQuestion=Are you sure you want to overwrite {0}?
 MSG_SaveAs_OverwriteQuestion_Title=Save As
 
-MSG_EncodingProblem=The file cannot be safely opened with encoding {0}. Do you want to continue opening it?
+MSG_EncodingProblem=The file {1} cannot be safely opened with encoding {0}. Do you want to continue opening it?
 
 CTL_Source=Source
