Issue #204639 - Options window, Editor section, General tab has a purposeless horizontal scroll bar.

--- a/options.editor/src/org/netbeans/modules/options/generaleditor/Bundle.properties
+++ b/options.editor/src/org/netbeans/modules/options/generaleditor/Bundle.properties
@@ -96,7 +96,7 @@ AD_Camel_Case_Behavior=Camel Case  Behavior
 CTL_Enable_Camel_Case_In_Java=&Enable Camel Case Navigation
 AN_Enable_Camel_Case_In_Java=&Enable Camel Case Navigation
 AD_Enable_Camel_Case_In_Java=&Enable Camel Case Navigation
-CTL_Camel_Case_Behavior_Example=(Example: Caret stops at S, T, N in "SomeTypeName" when using next/previous word actions)
+CTL_Camel_Case_Behavior_Example=<html>(Example: Caret stops at S, T, N in "SomeTypeName"<br>when using next/previous word actions)</html>
 AN_Camel_Case_Behavior_Example=(Example: Caret stops at S, T, N in "SomeTypeName" when using next/previous word actions)
 AD_Camel_Case_Behavior_Example=(Example: Caret stops at S, T, N in "SomeTypeName" when using next/previous word actions)
 CTL_Javadoc_Next_To_CC=Display Documentation Next to Completion
