UI of search results window - buttons, text detail nodes

--- a/api.search/src/org/netbeans/modules/search/Bundle.properties
+++ b/api.search/src/org/netbeans/modules/search/Bundle.properties
@@ -60,7 +60,8 @@ ACSD_ShowContext=Toggles display of the matching string's context
 TEXT_BUTTON_PREV_MATCH=Go to the previous matching string - Ctrl+Comma
 TEXT_BUTTON_NEXT_MATCH=Go to the next matching string - Ctrl+Period
 TEXT_BUTTON_EXPAND=Expand/Collapse all nodes in the tree
-TEXT_BUTTON_TOGGLE_VIEW=Toggle view: flat / directory tree
+TEXT_BUTTON_FLAT_VIEW=Show results as list of files
+TEXT_BUTTON_TREE_VIEW=Show results as directory tree
 TEXT_BUTTON_APPLY=\ &Use This Criterion for Search
 ACS_TEXT_BUTTON_APPLY=N/A
 TEXT_BUTTON_STOP=Stop Search
@@ -134,6 +135,7 @@ TEXT_DETAIL_FMT_FULL1=[{1} at line {2}, column {3}]  {0}
 TEXT_DETAIL_FMT_FULL2=[{1} line {2}]  {0}
 TEXT_DETAIL_FMT_NAME1=position {0}:{1}
 TEXT_DETAIL_FMT_NAME2=line {0}
+TEXT_DETAIL_FMT_NAME3=column {0}
 TEXT_INFO_TITLE=Warnings and Errors
 TEXT_INFO_LIMIT_REACHED=Too much problems. Showing only first 100 warning and errors.
 # {0} error message
