#201660 - Missing items in CSS completion list

--- a/css.editor/src/org/netbeans/modules/css/editor/module/main/properties/colors.properties
+++ b/css.editor/src/org/netbeans/modules/css/editor/module/main/properties/colors.properties
@@ -38,7 +38,7 @@
 #
 # Portions Copyrighted 2011 Sun Microsystems, Inc.
 
-color=<colors-list> | <system-color> |  <rgb> | <rgba> | <hsl> | <hsla> | !hash_color_code | transparent | currentColor
+color=<colors-list> | <system-color> |  <rgb> | <rgba> | <hsl> | <hsla> | !hash_color_code | transparent | currentColor | inherit
 
 opacity=!number
 
