Issue #211529 - Options->Miscellaneous->Versioning has a purposeless horizontal scroll bar

--- a/git/src/org/netbeans/modules/git/options/Bundle.properties
+++ b/git/src/org/netbeans/modules/git/options/Bundle.properties
@@ -49,7 +49,7 @@ AdvancedOption_Tooltip_Git=Git Global Options
 GitOptionsPanel.excludeNewFiles.toolTipText=Newly created files will have to be manually included in commit
 GitOptionsPanel.excludeNewFiles.text=&Exclude new files from commit automatically
 
-GitOptionsPanel.signOffCheckBox.text=Add Signed-off-by line by the committer at the end of the commit log message
+GitOptionsPanel.signOffCheckBox.text=<html>Add Signed-off-by line by the committer at the end<br>of the commit log message</html>
 GitOptionsPanel.cbIgnoreNotSharableFiles.toolTipText=Permanently ignores (by modifying the .gitignore file) folders generally not meant to be committed into the repository (build, dist etc.)
 #Files ignored by NetBeans (as dist or build folder) will be automatically ignored in .gitignore file
 GitOptionsPanel.cbIgnoreNotSharableFiles.text=Permanently i&gnore non-sharable folders
