--- a/subversion/src/org/netbeans/modules/subversion/options/Bundle.properties
+++ b/subversion/src/org/netbeans/modules/subversion/options/Bundle.properties
@@ -95,8 +95,8 @@ SvnOptionsPanel.jLabel3.text=Connection Settings
 
 SvnOptionsPanel.jLabel4.text=Subversion Status Labels
 MissingCliClientPanel.browseButton.text=Browse...
-SvnOptionsPanel.jLabel6.text=<html>Use this Button to manage the Connection Settings for all previously used URLs:</html>
-SvnOptionsPanel.jLabel7.text=<html>To define the Folder variable content (Branch/Tag name) press:</html>
+SvnOptionsPanel.jLabel6.text=<html>Use this Button to manage the Connection<br>Settings for all previously used URLs:</html>
+SvnOptionsPanel.jLabel7.text=<html>To define the Folder variable content<br>(Branch/Tag name) press:</html>
 SvnOptionsPanel.jLabel6.AccessibleContext.accessibleDescription=Lets you to manage the connection settings
 SvnOptionsPanel.jLabel6.AccessibleContext.accessibleName=Manage connections
 SvnOptionsPanel.jLabel7.AccessibleContext.accessibleName=Define Folder variable
@@ -125,4 +125,4 @@ LBL_PreferredClient.SVNKIT = SvnKit
 SvnOptionsPanel.browseJavahlButton.text=&Browse...
 SvnOptionsPanel.lblRestartWarning.text=Restart may be needed!
 SvnOptionsPanel.textPaneClient.contentType=text/html
-OptionsPanel.textPaneClient.text=<html><body>For more information on different kinds of Subversion clients see the <a href="http://wiki.netbeans.org/FaqSubversionClients">Supported Clients FAQ</a></body></html>
+OptionsPanel.textPaneClient.text=<html><body>For more information on different kinds of Subversion clients<br>see the <a href="http://wiki.netbeans.org/FaqSubversionClients">Supported Clients FAQ</a></body></html>
