Issue #207839: IllegalStateException: getInputStream invoked in AWT - fixed.

--- a/java.editor/src/org/netbeans/modules/editor/java/Bundle.properties
+++ b/java.editor/src/org/netbeans/modules/editor/java/Bundle.properties
@@ -137,8 +137,8 @@ JCP-no-parameters=No parameters
 JCP-imported-items=Imported Items; 
 JCP-instance-members=Instance Members; 
 
-#JavaCodeTemplateProcessor/Filter
-JCT-scanning-in-progress=Cannot initialize code templates while scanning in progress...
+#JavaCodeTemplateProcessor
+JCT-init=Initializing code templates...
 
 #JavaCompletionItem
 override_Lbl=override
