--- a/libs.jna/nbproject/project.properties
+++ b/libs.jna/nbproject/project.properties
@@ -47,3 +47,4 @@ release.external/jna-3.4.0.jar!/com/sun/jna/linux-i386/libjnidispatch.so=modules
 release.external/jna-3.4.0.jar!/com/sun/jna/win32-amd64/jnidispatch.dll=modules/lib/amd64/jnidispatch.dll
 release.external/jna-3.4.0.jar!/com/sun/jna/win32-x86/jnidispatch.dll=modules/lib/x86/jnidispatch.dll
 jnlp.indirect.files=modules/lib/**/*jnidispatch*
+sigtest.gen.fail.on.error=false
