--- a/cloud.oracle/src/org/netbeans/modules/cloud/oracle/ui/Bundle.properties
+++ b/cloud.oracle/src/org/netbeans/modules/cloud/oracle/ui/Bundle.properties
@@ -54,7 +54,7 @@ OracleWizardPanel.something.wrong=Cannot connect to Oracle Public Cloud. Double 
 OracleWizardPanel.wrong.SDK=Cannot use specified SDK to connect Oracle Public Cloud.
 OracleWizardComponent2.jLabel1.text=<html>Following environments were detected in Oracle Public Cloud and will be available in the IDE as regular deployment servers:
 OracleWizardComponent2.none=None available yet
-OracleWizardComponent.jLabel2.text=Administrator:
+OracleWizardComponent.jLabel2.text=Service Administrator:
 OracleWizardComponent.jLabel3.text=jLabel3
 OracleWizardComponent.jLabel4.text=Password:
 
@@ -71,7 +71,7 @@ LogsComponent.refreshButton.text=&Refresh
 LogsComponent.loading=loading...
 LogsComponent.loading.failed=Fetching jobs failed
 OracleWizardComponent.jLabel5.text=Identity Domain:
-OracleWizardComponent.jLabel7.text=Service Name:
+OracleWizardComponent.jLabel7.text=Java Service Name:
 
 UndeployApplicationAction.name=Undeploy
 StartApplicationAction.name=Start
@@ -86,7 +86,7 @@ CustomizerCloudGeneral.passwordLabel.text=&Password:
 CustomizerInstanceGeneral.classpathLabel.text=&Classpath:
 CustomizerInstanceGeneral.warningLabel.text=<html>No suitable Weblogic server registered in the IDE was found.
 CustomizerInstanceGeneral.javaee5=Java EE 5 API
-CustomizerCloudGeneral.serviceInstanceLabel.text=Service &Name:
+CustomizerCloudGeneral.serviceInstanceLabel.text=Java Service &Name:
 LogsComponent.jLabel2.text=&Logs:
 LogsComponent.jLabel1.text=&Jobs:
 LogsComponent.jSplitPane1.TabConstraints.tabTitle=Service Jobs
@@ -98,3 +98,7 @@ CustomizerCloudGeneral.configureButton.text=&Configure
 CustomizerCloudGeneral.identityDomainLabel.text=&Identity Domain:
 
 MSG_SDKMisconfigured=There was an error calling Cloud SDK. Double check your cloud configuration and try again.
+OracleWizardComponent.jLabel6.text=Database Service Name:
+OracleWizardComponent.dbServiceNameTextField.text=
+CustomizerCloudGeneral.jLabel2.text=&Database Service Name:
+CustomizerCloudGeneral.dbServiceNameTextField.text=
