fixed Bug #196489 Typo in resource bundle

--- a/lib.terminalemulator/src/org/netbeans/lib/terminalemulator/support/Bundle.properties
+++ b/lib.terminalemulator/src/org/netbeans/lib/terminalemulator/support/Bundle.properties
@@ -50,9 +50,9 @@ LBL_Title=Choose font
 LBL_ForegroundColor=Foreground Color:
 MNM_ForegroundColor=N
 
-LBL_ChooseForegroundColor=Choose Foreground Color
-LBL_ChooseBackgroundColor=Choose Background Color
-LBL_ChooseSelectionBackgroundColor=Choose Selection Background Color"));
+#LBL_ChooseForegroundColor=Choose Foreground Color
+#LBL_ChooseBackgroundColor=Choose Background Color
+#LBL_ChooseSelectionBackgroundColor=Choose Selection Background Color"));
 LBL_Options=Options governing Terminal Windows
 CTL_Restore=Restore
 MNM_Restore=R
