--- a/cnd.modelui/src/org/netbeans/modules/cnd/modelui/parsing/Bundle.properties
+++ b/cnd.modelui/src/org/netbeans/modules/cnd/modelui/parsing/Bundle.properties
@@ -44,7 +44,7 @@ Dialog_Title=Resolve Parsing Problem
 Dialog_Action=details
 Dialog_Short_Title=Lack of Memory
 
-Explanation=While parsing project IDE detects a lack of avaliable memory. Lack of memory results in slowdown parsing.<br>\
+Explanation=While parsing project IDE detects a lack of available memory. Lack of memory results in slowdown parsing.<br>\
 To resolve problem you can provide Java more heap size by option "-J-Xmx&lt;size&gt;". \
 For example option: <pre>-J-Xmx1000m</pre> specifies 1000 megabytes of heap size. \
 You can write this option in the configure file ${NB}/etc/netbeans.conf in the property netbeans_default_options.<br>\
