Updating some obsolete references to Component Inspector

--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -108,7 +108,7 @@ ACSD_AddMode=If selected, the Form Editor is in \"Add Mode\" - you may add the s
 
 # HandleLayer
 ACSN_HandleLayer=Visual form designer
-ACSD_HandleLayer=Use Component Inspector for keyboard-only navigation
+ACSD_HandleLayer=Use Navigator for keyboard-only navigation
 
 # displayed text of not set value (for "write only" properties)
 CTL_ValueNotSet=<Not Set>
@@ -762,7 +762,7 @@ Paint_Layout=Visualize Additional &Layout Information
 Paint_Layout_Hint=For the Free Design mode determines whether to paint additional layout structures (anchors, alignment, gaps).
 
 MSG_Paiting_Exception=The following exception has been thrown during painting of the form. \
-Use the Inspector window to fix or remove the problematic component.
+Use the Navigator window to fix or remove the problematic component.
 
 TITLE_Choose_Bean=Choose Bean
 MSG_Choose_Bean=Class name:
