--- a/form/src/org/netbeans/modules/form/assistant/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/assistant/Bundle.properties
@@ -48,7 +48,7 @@ select_2=Use the Connection Mode button (in the toolbar) to establish a connecti
 select_3=The Preview Design button (in the toolbar) enables you to test the design of the form.
 select_4=The Tools>Palette>Swing/AWT Components menu item allows you to modify the content of the Palette.
 select_5=Use the Palette window to add a component to the designer.
-select_6=The Inspector window displays a tree hierarchy of components in the opened form.
+select_6=The Navigator window displays a tree hierarchy of components in the opened form.
 select_7=The Properties window displays editable settings for the selected components.
 
 # Connect mode messages
@@ -111,7 +111,7 @@ cardLayout=Add the component as a card into the CardLayout.
 tabbedPaneEmpty=Add a container or component to create a tab.
 tabbedPaneOne=Add the second component/container to create the second tab.
 tabbedPane_1=Double-click the tab to change its text.
-tabbedPane_2=You can reorder the tabs using drag and drop in the Inspector.
+tabbedPane_2=You can reorder the tabs using drag and drop in the Navigator.
 buttonGroup=Use the ButtonGroup component and the buttonGroup property to create a group of exclusive JRadioButtons.
 designThisContainer=Use the Design This Container action from the context menu to focus on this container.
 comboBoxModel=Use the model property to edit the content of the JComboBox.
