#209230 - Tools->Options->Editor->Hints->Search is unreachable (S accelerator is used for "Search" and "Show As")

--- a/csl.api/src/org/netbeans/modules/csl/hints/infrastructure/Bundle.properties
+++ b/csl.api/src/org/netbeans/modules/csl/hints/infrastructure/Bundle.properties
@@ -7,7 +7,7 @@ Apply=Apply Fix
 Ok=OK
 Cancel=Cancel
 
-CTL_ShowAs_Label=&Show As\:
+CTL_ShowAs_Label=Sho&w As\:
 CTL_InTasklist_CheckBox=Show In &Problem Window
 
 CTL_Options_Border=Options\n
