--- a/java.hints.ui/src/org/netbeans/modules/java/hints/spiimpl/options/Bundle.properties
+++ b/java.hints.ui/src/org/netbeans/modules/java/hints/spiimpl/options/Bundle.properties
@@ -1,4 +1,4 @@
-CTL_ShowAs_Label=&Show As\:
+CTL_ShowAs_Label=Sho&w As\:
 CTL_InTasklist_CheckBox=Show In &Problem Window
 CTL_Scope_Label=&Scope\:
 
@@ -37,7 +37,7 @@ HintsPanel.newButton.text=New...
 HintsPanel.importButton.text=Import...
 HintsPanel.exportButton.text=Export...
 HintsPanel.refactoringsLabel.text=Inspections:
-HintsPanel.searchLabel.text=Search:
+HintsPanel.searchLabel.text=&Search:
 HintsPanel.editScriptButton.text=Edit Script
 HintsPanel.configLabel.text=Configurations:
 HintsPanel.openInEditor.text=Open in Editor
