--- a/maven.hints/src/org/netbeans/modules/maven/hints/pom/Bundle.properties
+++ b/maven.hints/src/org/netbeans/modules/maven/hints/pom/Bundle.properties
@@ -41,7 +41,7 @@
 DESC_RELEASE_VERSION=Shall not use RELEASE/LATEST/SNAPSHOT version, it makes the build eventually irreproducible in the future.
 
 
-CTL_ShowAs_Label=&Show As\:
+CTL_ShowAs_Label=Sho&w As\:
 CTL_InTasklist_CheckBox=Show In &Problem Window
 
 CTL_Options_Border=Options\n
