#204282 - Validate user name

--- a/derby/src/org/netbeans/modules/derby/ui/Bundle.properties
+++ b/derby/src/org/netbeans/modules/derby/ui/Bundle.properties
@@ -59,6 +59,8 @@ ERR_NeedRetypePassword=Retype Password for Confirmation.
 ERR_PasswordsDontMatch=Please check that you've entered and confirmed the same password.
 # 0 - the unsupported character
 ERR_DatabaseNameUnsupportedChar=The character {0} may be unsupported in a database name.
+ERR_UserNameNotSqlIdentifier=Value {0} is not a valid user name (not SQL identifier)
+ERR_UserNameIsSqlKeyword=Value {0} is an SQL reserved keyword
 
 # DerbySystemHomePanel
 LBL_SetDerbySystemHome=Java DB Properties
