#210189 - NPE at org.netbeans.modules.javafx2.project.ui.JFXRunPanel.updateBrowserList

--- a/javafx2.project/src/org/netbeans/modules/javafx2/project/ui/Bundle.properties
+++ b/javafx2.project/src/org/netbeans/modules/javafx2/project/ui/Bundle.properties
@@ -47,6 +47,7 @@ JFXRunPanel.buttonWebPage.text=Browse...
 JFXRunPanel.labelWebPageRemark.text=(Leave empty for generated web page)
 JFXRunPanel.labelWebBrowser.text=Web B&rowser:
 JFXRunPanel.buttonWebBrowser.text=&Manage...
+MSG_NoBrowser=No browser available
 
 JFXRunPanel.applicationParams.name=Name
 JFXRunPanel.applicationParams.value=Value
