fixed Bug #209200 Alt-Shift-. and Alt-Shift-, shortcuts doesn't work in C/C++ files

--- a/cnd.editor/src/org/netbeans/modules/cnd/editor/cplusplus/Bundle.properties
+++ b/cnd.editor/src/org/netbeans/modules/cnd/editor/cplusplus/Bundle.properties
@@ -163,3 +163,5 @@ CND_Highlighting_Display_Name=Highlighting
 CND_Remote_Display_Name=Remote Options
 CND_Other_Display_Name=Other
 
+select-element-next=Select Next Element
+select-element-previous=Select Previous Element
