#211597 - UI issues with the Cloud Providers window

--- a/server/src/org/netbeans/api/server/Bundle.properties
+++ b/server/src/org/netbeans/api/server/Bundle.properties
@@ -41,5 +41,6 @@
 # made subject to such option by the copyright holder.
 
 TXT_ServerManager=Servers
+TXT_CloudManager=Cloud Providers
 CTL_Close=Close
 AD_Close=Close
