--- a/cloud.oracle/src/org/netbeans/modules/cloud/oracle/Bundle.properties
+++ b/cloud.oracle/src/org/netbeans/modules/cloud/oracle/Bundle.properties
@@ -47,4 +47,5 @@ MSG_REDEPLOYING_APP=Redeploying...
 MSG_WhiteListOutput=Compliance check ({0})
 MSG_DeploymentOutput={0} Deployment
 MSG_Deployment_OK=Deployment was successful. Application is being opened at {0}
+MSG_Deployment_OK_EJB=Deployment was successful.
 MSG_Deployment_FAILED=Deployment failed. See above logs for more details.
