fixed Bug #207745 Resolve Parsing Problem message uses strange english

--- a/cnd.modelui/src/org/netbeans/modules/cnd/modelui/parsing/Bundle.properties
+++ b/cnd.modelui/src/org/netbeans/modules/cnd/modelui/parsing/Bundle.properties
@@ -45,10 +45,7 @@ Dialog_Action=details
 Dialog_Short_Title=Lack of Memory
 
 Explanation=The IDE has detected slowness in parsing the project, which is caused by a lack of available memory.<br>\
-To resolve the problem you can start the IDE with more Java heap size by using the option "-J-Xmx&lt;size&gt;".<br>\
-For example, the option: <pre>-J-Xmx1000m</pre> specifies 1000 megabytes of heap size.<br>\
-You can specify this option in the configure file ${NB}/etc/netbeans.conf in the property netbeans_default_options.<br>\
-Tip: If you use the 64-bit version of the JVM you can reduce memory consumption by using the 32-bit version instead.
+For solutions to this problem, search the IDE help for "Memory Requirements for Large Projects". 
 
 Y_memory_units=Mb
 Y_speed_units=KLines/second
