#205631 - No CSS Class/Id Rule Found

--- a/html.editor/src/org/netbeans/modules/html/editor/hints/css/Bundle.properties
+++ b/html.editor/src/org/netbeans/modules/html/editor/hints/css/Bundle.properties
@@ -40,6 +40,12 @@
 # Version 2 license, then the option applies only if the new code is
 # made subject to such option by the copyright holder.
 
+#Options
+csl-hints/text/html/hints/css=CSS
+
 MSG_MissingCssId=No CSS id rule found
 MSG_MissingCssClass=No CSS class rule found
 MSG_AddStyleSheetLink=Add reference to containing stylesheet {0}
+
+MSG_MissingCssClass_Desc=Checks if referred css class rule exists.
+MSG_MissingCssId_Desc=Checks if referred css ID rule exists.
