Editor search behavior option renamed

--- a/options.editor/src/org/netbeans/modules/options/generaleditor/Bundle.properties
+++ b/options.editor/src/org/netbeans/modules/options/generaleditor/Bundle.properties
@@ -111,12 +111,13 @@ AD_Remove_Trailing_Whitespace=Remove Trailing Whitespace
 CTL_Search=Search
 AN_Search=Search
 AD_Search=Search
-CTL_Editor_Search_Type=Editor Search Type
-AN_Editor_Search_Type=Editor Search Type
-AD_Editor_Search_Type=Editor Search Type
-EST_closing=Closing
-EST_default=Default
-Editor_Search_Type_Tooltip= In Closing type Enter accepts search match, Esc jumps to start. Both close searchbar. Default type closes searchbar by Esc or button. Enter means find a new instance.
+CTL_Editor_Search_Type=Editor Search Behavior
+AN_Editor_Search_Type=Editor Search Behavior
+AD_Editor_Search_Type=Editor Search Behavior
+EST_closing=Enter to finish search
+EST_default=Enter to find next
+Editor_Search_Type_Tooltip_closing=<html>This behavior is similar to Vi search. <br /> Enter accepts search match, Esc jumps to position before search. Both close searchbar.</html>
+Editor_Search_Type_Tooltip_default=<html>This behavior is similar to Firefox search. <br /> It closes searchbar by Esc or button. Enter means find a new instance.</html>
 RTW_never=Never
 RTW_always=Always
 RTW_modified-lines=From Modified Lines Only
