#211640 Allow to move the Help button to the left side

--- a/core.windows/src/org/netbeans/core/windows/services/Bundle.properties
+++ b/core.windows/src/org/netbeans/core/windows/services/Bundle.properties
@@ -97,3 +97,5 @@ ACS_CLOSED_OPTION_NAME=Close
 ACS_CLOSED_OPTION_DESC=Close button
 
 Lbl_CopyToClipboard=Copy to clipboard
+
+HelpButtonAtTheLeftSide=false
